# rust-graphql-demo

./: Cargo.toml  LICENSE  chinook.db  schema.rs
src/: _graphql_schema.rs  database_schema.rs  lib.rs  main.rs
src/graphql_schema/: mod.rs  query.rs  single_query.rs
