[package]
name = "rust_graphql_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.15.9"
indexmap = "1.8.1"
warp = "0.3"
juniper_warp = "0.7.0"
env_logger = "0.9"

[dependencies.tokio]
version = "1.17.0"
features = ["rt", "macros", "rt-multi-thread"]

[dependencies.sqlx]
version = "0.5.13"
features = ["runtime-async-std-native-tls", "sqlite"]

[dependencies.sea-schema]
version = "0.7.1"
default-features = false
features = ["discovery", "debug-print", "sqlx-sqlite", "runtime-async-std-native-tls"]

[dependencies.sea-query]
version = "0.24.2"
default-features = false
features = ["derive", "backend-sqlite"]
